k8s/infrastructure/traefik/test/nginx-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-07-17T14:00:54Z"
  labels:
    app: nginx-test
  name: nginx-test
  namespace: default
  resourceVersion: "86491"
  uid: 237e044d-cb7d-4118-b7ed-96f6f367f754
spec:
  clusterIP: 10.96.110.109
  clusterIPs:
  - 10.96.110.109
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-test
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
